# or-tools

./: .bazelrc  .gitignore  MODULE.bazel
ortools/gscip/: BUILD.bazel
ortools/linear_solver/: BUILD.bazel
ortools/linear_solver/proto_solver/: BUILD.bazel
ortools/linear_solver/python/: BUILD.bazel
ortools/math_opt/io/: BUILD.bazel
ortools/math_opt/solvers/: BUILD.bazel
ortools/math_opt/solvers/gscip/: BUILD.bazel
ortools/pdlp/: BUILD.bazel
ortools/pdlp/python/: BUILD.bazel
ortools/pdlp/samples/: code_samples.bzl
